--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Rubik", sans-serif;
+  overflow: hidden;
 }
 button {
   border: none;
@@ -24,31 +25,31 @@ header h1 {
 }
 /* --------------CONTENT------------------------------------ */
 .container {
+  margin-top: 5rem;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   width: 100vw;
+  height: 100vh;
 }
 .container h3 {
   font-variant: small-caps;
   color: blueviolet;
-  margin-top: 5rem;
   font-size: 1.5rem;
   letter-spacing: 0.1rem;
 }
 .typing {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   flex-direction: column-reverse;
-  gap: 1rem;
+  /* gap: 1rem; */
 }
 textarea {
   resize: none;
   width: 40rem;
-  height: 18rem;
+  height: 15rem;
   border: 0.175rem solid blueviolet;
   border-radius: 2rem 0 2rem 0;
   color: blueviolet;
@@ -58,27 +59,28 @@ textarea {
 }
 .time {
   font-family: "Orbitron", sans-serif;
-  font-size: 6rem;
+  font-size: 3rem;
+  letter-spacing: 2rem;
   font-weight: lighter;
   color: blueviolet;
 }
-.buttons{
-     display: flex;
-     gap: 2rem;
+.buttons {
+  display: flex;
+  gap: 2rem;
 }
-.btn{
-    background: blueviolet;
-    padding: .5rem 1rem;
-    color: white;
-    border-radius: .5rem;
-    cursor: pointer;
+.btn {
+  background: blueviolet;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+  cursor: pointer;
 }
 
-#remark{
-    width: 25rem;
-    text-align: center;
-    background: hsl(271, 76%, 53%, .7);
-    padding: .3rem 4rem;
-    color: white;
-    font-size: 3rem;
+#remark {
+  width: 25rem;
+  text-align: center;
+  padding: 0.3rem 4rem;
+  color: blueviolet;
+  font-size: 3rem;
+  font-family: "Orbitron", sans-serif;
 }
