I have to take a break cos im a bit lost, lmao

--- a/style.css
+++ b/style.css
@@ -64,6 +64,13 @@ textarea {
   font-weight: lighter;
   color: blueviolet;
 }
+p{
+  color: blueviolet;
+  font-weight: bolder;
+}
+#show{
+  color: blueviolet;
+}
 .buttons {
   display: flex;
   gap: 2rem;
